--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,13 @@ p, li {
   font-size: 16px;
   line-height: 1.6;
 }
+.whatsapp {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 12px 20px;
+  background: #25D366;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 5px;
+}
