--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,14 @@ p, li {
 }
 .whatsapp {
   display: inline-block;
-  margin-top: 15px;
-  padding: 12px 20px;
+  margin-top: 20px;
+  padding: 14px 26px;
   background: #25D366;
   color: white;
-  text-decoration: none;
   font-size: 18px;
-  border-radius: 5px;
+  font-weight: bold;
+  border-radius: 30px;
+  text-decoration: none;
 }
+
+
